--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "flush-promises": "^1.0.2",
     "vue": "^3.2.47"
   },
   "devDependencies": {
